# picasa-next

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CLAUDE_中文对照.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  NOTICE.md  README.md  TRADEMARK.md  clip_diagnose.py  convert_large_onnx.bat  e2.txt  e3.txt  e4.txt  e5.txt  errors.txt  errors_full.txt  eslint.config.js  fix_errors.py  fix_errors2.py  fix_errors3.py  index.html  package-lock.json  package.json  temp_header.onnx  temp_text.onnx  test_ort_timing.cjs  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.codewhale/: instructions.md
.github/workflows/: ci.yml  drift-alarm.yml  oss-gate.yml  release.yml
crates/exotic-protocol/: Cargo.toml
crates/exotic-protocol/src/: frame.rs  lib.rs  message.rs
crates/exotic-workers/ai-worker/: Cargo.toml
crates/exotic-workers/ai-worker/src/: batch.rs  main.rs  session.rs
crates/exotic-workers/psd-probe/: Cargo.toml
crates/exotic-workers/psd-probe/src/: main.rs
crates/exotic-workers/psd-worker/: Cargo.toml
crates/exotic-workers/psd-worker/src/: decode.rs  main.rs
crates/picasa-next-ai-core/: Cargo.toml
crates/picasa-next-exotic-trust/: Cargo.toml  build.rs
crates/picasa-next-exotic-trust/resources/: exotic-keyset.json
crates/picasa-next-exotic-trust/src/: crypto.rs  lib.rs  license.rs
crates/picasa-next-free-stub/: Cargo.toml
crates/picasa-next-free-stub/src/: lib.rs
crates/picasa-next-plugin-api/: Cargo.toml
crates/scrollery-ai-core/: Cargo.toml
crates/scrollery-ai-core/src/: clip.rs  decoded.rs  embedding.rs  engine.rs  error.rs  face.rs  face_profile.rs  face_types.rs  lib.rs  profile.rs  provider.rs
crates/scrollery-exotic-trust/: Cargo.toml
crates/scrollery-free-stub/: Cargo.toml
crates/scrollery-plugin-api/: Cargo.toml
crates/scrollery-plugin-api/src/: lib.rs
plan-docs/: architecture_notes.md  code_review_2026-06-10.md  code_review_2026-06-18.md  implementation_plan.md  implementation_plan_v1.0.md  implementation_plan_v1.1.md  implementation_plan_v1.2.md  perf_hardening_plan_v2.md  prompt_for_new_session.md  基本要求和角色设定.md  基本要求和角色设定_v1.0.md  基本要求和角色设定_v1.1.md  踩坑记录_AI性能调优.md  重要提示.md
public/: splashscreen.html
scratch/: fix_settings.cjs
scripts/: build-internal-installer.ps1  check-rename-gate.mjs  check-theme-contrast.mjs  exotic-dev-registry.mjs  exotic-internal-registry.mjs  exotic-issue-license.mjs  exotic-prod-ceremony.mjs  extract-changelog.mjs  generate-notice.mjs  rename-gate.json  sync-version.mjs  verify-channel-bundle.mjs
scripts/lib/: exotic-signing.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.direct-release.conf.json  tauri.perf.conf.json  tauri.windows.conf.json  test_bs.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: face_smoke.rs  test_ort_load.rs
src-tauri/resources/: exotic-catalog.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: clip.rs  engine.rs  face.rs  face_cluster.rs  face_pipeline.rs  face_profile.rs  mod.rs  pipeline.rs  profile.rs  provider.rs  remote_registry.rs  search.rs  vector_store.rs  worker_client.rs  worker_pipeline.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/derive/: audio.rs  doc.rs  image.rs  kind.rs  mod.rs  pipeline.rs  video.rs
src-tauri/src/download/: mod.rs
src-tauri/src/engine/: image_rs.rs  mod.rs  traits.rs
src-tauri/src/engine/gpu/: mod.rs  wic_engine.rs
src-tauri/src/exotic/: catalog.rs  channel_stubs.rs  coordinator.rs  crypto.rs  fetch.rs  fingerprint.rs  install.rs  installer.rs  license.rs  limiter.rs  mod.rs  package.rs  pipeline.rs  registry.rs  sink.rs  supervisor.rs  task.rs  worker.rs
src-tauri/src/ipc/: ai_commands.rs  audio_commands.rs  blocking.rs  collection_commands.rs  config_commands.rs  derive_commands.rs  doc_commands.rs  exotic_commands.rs  face_commands.rs  file_ops_commands.rs  hgallery_commands.rs  layout_commands.rs  media_commands.rs  mod.rs  proofread_commands.rs  scan_commands.rs  search_commands.rs  storage_commands.rs  system_commands.rs  thumbnail_commands.rs  volume_commands.rs
src-tauri/src/layout/: cache.rs  hcache.rs  horizontal.rs  items_cache.rs  justified.rs  mod.rs
src-tauri/src/proofread/: mod.rs
src-tauri/src/scanner/: enricher.rs  fast_scan.rs  live_photo.rs  metadata.rs  mod.rs  video_meta.rs  volume_probe.rs  volume_watch.rs  walker.rs
src-tauri/src/storage/: local.rs  mod.rs  webdav.rs
src-tauri/src/thumbnail/: cache.rs  exif_thumb.rs  generator.rs  mod.rs  router.rs  thumbhash.rs
src-tauri/src/utils/: format.rs  hash.rs  mod.rs  path.rs
src-tauri/src/video/: media_foundation.rs  mod.rs
src-tauri/tests/golden/: worker_e2e_vectors.json
src/composables/: galleryLayoutSource.ts  useAnalysisController.ts  useBucketVirtualScroll.spec.ts  useBucketVirtualScroll.ts  useCollectionToast.ts  useConfirm.ts  useDerivationAutoStart.ts  useExoticGate.spec.ts  useExoticGate.ts  useExoticStore.spec.ts  useExoticStore.ts  useFocusTrap.spec.ts  useFocusTrap.ts  useFolderTree.ts  useFullscreenExitGuard.ts  useGridFlipReflow.ts  useHVirtualScroll.spec.ts  useHVirtualScroll.ts  useHoverPreview.ts  useJustifiedLayout.ts  useKnownVolumes.spec.ts  useKnownVolumes.ts  useMediaDetail.ts  useMediaDragToFolder.ts  usePager.ts  usePluginEntitlement.spec.ts  usePluginEntitlement.ts  usePointerDrag.ts  useRequestQueue.spec.ts  useRequestQueue.ts  useSelection.ts  useSettingsCards.ts  useSidebarResize.ts  useSidebarSections.ts  useTheme.ts  useThumbnail.ts  useViewDescriptor.ts  useViewIds.ts  useViewportDimPriority.ts  useVirtualScroll.spec.ts  (+1 more)
src/constants/: colorLabels.ts  defaults.ts  formats.ts  ipc.ts  settingsMap.ts
src/i18n/: index.ts  localeIntegrity.spec.ts
src/router/: index.ts
src/stores/: aiStore.ts  collectionStore.ts  uiStore.ts  (+8 more)
tools/: check_plan_canonical.mjs  convert_large_onnx.bat  export_clip_l14_336_onnx.py  face_crosscheck.py  scrfd_crosscheck.py  sface_probe.py  validate_clip_l14_336_onnx.py
(+120 files in other folders)
