# 根 workspace 清单（Part6 §3.9.1 / §8.2 C5 前置子任务）。
#
# 此前 src-tauri 与 crates/* 各为独立 package、无统一 workspace。为承接 §3.9 的开源/闭源 crate 拆分
# （plugin-api 叶 crate + free-stub + 闭源 pro overlay 注入），先建 workspace 把现有 4 个 crate 纳入、
# 保持构建/测试全绿——这是「再加 plugin-api/free-stub」的前置子任务（§8.2 C5：先纳入现有、绿、再扩）。
#
# 🔴 members 显式逐一列出，禁用 `crates/*` glob（§3.9.1 P0-5）：glob 会①命中无 Cargo.toml 的
#    `crates/exotic-workers/` 目录致 `cargo metadata` 报错、②只展开一层、漏掉两层深的
#    psd-worker/psd-probe（打穿 Part7 G3「psd-worker 测试可达」）。
# 🔴 resolver 必须显式 "2"：2021 edition 单 crate 默认用 resolver 2，但进 workspace 后根不声明会
#    回退 "1" → feature 统一行为变化。显式 "2" 保持现状。
[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/exotic-protocol",
    "crates/exotic-workers/psd-worker",
    "crates/exotic-workers/psd-probe",
    "crates/picasa-next-plugin-api",
    "crates/picasa-next-free-stub",
    "crates/picasa-next-exotic-trust",
]

# ── 构建 profile（仅 workspace 根生效；member 内的 [profile.*] 会被 cargo 忽略）──────────────────
# 自 src-tauri/Cargo.toml 迁入（连同其原注释）。
#
# 必须用默认的 `unwind`：使 catch_unwind 能拦截第三方图像编解码器在损坏/畸形文件上的 panic
# （见 src-tauri/src/thumbnail/generator.rs）；`panic = "abort"` 下单张坏图会中止整个进程。
# psd-worker/psd-probe 亦依赖 unwind（每任务顶层 catch_unwind 拦 psd 对畸形输入的 panic）——
# 根 release 不设 abort，全 member 继承 unwind，故各 member 原 `panic = "unwind"` 冗余、已删。
[profile.release]
lto       = "thin"
opt-level = 3
strip     = true

# ── 极致裁剪 Lite 的尺寸 profile（src-tauri §1.4.7）─────────────────────────────────────────────
# 体积优先：opt-level="z" + fat LTO + 单 codegen-unit。用法：tauri build --profile lite。
# ⚠️ 不可用 panic="abort"：catch_unwind 依赖 unwind 拦截图像编解码器对坏图的 panic。
[profile.lite]
inherits      = "release"
opt-level     = "z"
lto           = "fat"
codegen-units = 1
strip         = true
