[package]
name = "picasa-next"
version = "0.1.0"
description = "Picasa Next — High-performance cross-platform media asset manager"
authors = ["Picasa Next Contributors"]
edition = "2021"

[lib]
name = "picasa_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ──────────────────────────────────────────────────────────────
tauri          = { version = "2", features = ["protocol-asset", "unstable", "devtools", "tray-icon"] }
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-shell        = "2"
tauri-plugin-window-state = "2"

# ── Async runtime ────────────────────────────────────────────────────────────
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# ── Database ─────────────────────────────────────────────────────────────────
rusqlite   = { version = "0.31", features = ["bundled", "collation"] }
r2d2       = "0.8"
r2d2_sqlite = "0.24"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror  = "1"

# ── Hashing ───────────────────────────────────────────────────────────────────
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# ── Image processing ──────────────────────────────────────────────────────────
image              = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
fast_image_resize  = "4"
thumbhash          = "0.1"
windows            = { version = "0.58", features = ["Win32_Graphics_Imaging", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_System_Com", "Win32_Graphics_Dwm"] }

# ── EXIF / XMP ───────────────────────────────────────────────────────────────
kamadak-exif = "0.5"
quick-xml    = { version = "0.36", features = ["serialize"] }

# ── CPU parallelism ───────────────────────────────────────────────────────────
rayon = "1"

# ── File system traversal ─────────────────────────────────────────────────────
walkdir = "2"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender   = "0.2"

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono   = { version = "0.4", features = ["serde"] }
anyhow   = "1"
crossbeam-channel = "0.5.15"

# ── AI inference ───────────────────────────────────────────────────────────────
# ONNX Runtime (load-dynamic: ONNX Runtime DLL loaded at runtime via ORT_DYLIB_PATH)
# ONNX Runtime（使用 download-binaries 自动下载并复制官方 DLL，避免使用 Windows System32 自带的旧版库导致死锁）
ort       = { version = "2.0.0-rc.12", features = ["load-dynamic", "directml", "download-binaries", "copy-dylibs"] }
ndarray   = "0.16"
# HuggingFace tokenizers — BERT WordPiece for Chinese-CLIP text encoder
# HuggingFace tokenizers — 用于 Chinese-CLIP 文本编码器的 BERT WordPiece
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
lexicmp = "0.2.0"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = []

[profile.dev]
incremental = true

# Compile all dependencies with full optimizations even in dev mode
# 在开发模式下也使用完全优化来编译所有依赖库（极大提升图片解码速度）
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic    = "abort"
# Use multiple codegen units for faster parallel builds (default is 16)
# codegen-units = 1
# Use thin LTO instead of fat LTO (huge speedup in link time)
lto      = "thin"
opt-level = 3
strip    = true
