[package]
name = "picasa-next"
version = "0.1.0"
description = "Picasa Next — High-performance cross-platform media asset manager"
authors = ["Picasa Next Contributors"]
edition = "2021"
default-run = "picasa-next"

[lib]
name = "picasa_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ──────────────────────────────────────────────────────────────
tauri          = { version = "2", features = ["protocol-asset", "unstable", "devtools", "tray-icon"] }
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-shell        = "2"
tauri-plugin-window-state = "2"

# ── Async runtime ────────────────────────────────────────────────────────────
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# ── Database ─────────────────────────────────────────────────────────────────
rusqlite   = { version = "0.31", features = ["bundled", "collation"] }
r2d2       = "0.8"
r2d2_sqlite = "0.24"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror  = "1"

# ── Hashing ───────────────────────────────────────────────────────────────────
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# ── Image processing ──────────────────────────────────────────────────────────
image              = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "tiff"] }
fast_image_resize  = "4"
thumbhash          = "0.1"
windows            = { version = "0.58", features = ["Win32_Graphics_Imaging", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_System_Com", "Win32_Graphics_Dwm", "Win32_Graphics_Dxgi"] }

# ── EXIF / XMP ───────────────────────────────────────────────────────────────
kamadak-exif = "0.5"
quick-xml    = { version = "0.36", features = ["serialize"] }

# ── CPU parallelism ───────────────────────────────────────────────────────────
rayon = "1"

# ── File system traversal ─────────────────────────────────────────────────────
walkdir = "2"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender   = "0.2"

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono   = { version = "0.4", features = ["serde"] }
anyhow   = "1"
crossbeam-channel = "0.5.15"

# ── AI inference ───────────────────────────────────────────────────────────────
# [当前方案] ONNX Runtime（使用 download-binaries 自动下载官方 DLL，打包体积增加 20MB）
ort       = { version = "2.0.0-rc.12", features = ["load-dynamic", "directml", "download-binaries", "copy-dylibs"] }

# [方案 5 准备] 使用 Windows 系统自带库：完全不捆绑 DLL，打包体积重回 5MB。
# 若要测试，请注释掉上方当前的 ort，解除下面这行的注释，并在 ai_commands.rs 中取消设置 ORT_DYLIB_PATH 的注释。
# ort       = { version = "2.0.0-rc.12", features = ["load-dynamic", "directml"] }

ndarray   = "0.16"
# HuggingFace tokenizers — BERT WordPiece for Chinese-CLIP text encoder
# HuggingFace tokenizers — 用于 Chinese-CLIP 文本编码器的 BERT WordPiece
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
lexicmp = "0.2.0"
wallpaper = "3.2"
arboard = "3.6.1"
trash = "5.2.6"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = []

[profile.dev]
incremental = true
# 开启基础优化（1）能显著提升我们自身代码在 dev 模式下的执行速度，同时编译速度仍较快
opt-level = 1

# Compile all dependencies with full optimizations even in dev mode
# 在开发模式下也使用完全优化来编译所有依赖库（极大提升图片解码速度）
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# `unwind` (the default) is required so catch_unwind can contain panics from
# third-party image codecs on corrupt/malformed files — see thumbnail/generator.rs.
# With `panic = "abort"` a single bad image would abort the whole process.
# 必须用默认的 `unwind`，使 catch_unwind 能拦截第三方图像编解码器在
# 损坏/畸形文件上的 panic（见 thumbnail/generator.rs）；
# `panic = "abort"` 下单张坏图会中止整个进程。
# Use multiple codegen units for faster parallel builds (default is 16)
# codegen-units = 1
# Use thin LTO instead of fat LTO (huge speedup in link time)
lto      = "thin"
opt-level = 3
strip    = true
