# crates/picasa-next-free-stub/Cargo.toml
# 插件平台 · 开源免费桩（Part6 §3.9.1 / §3.9.2）。
#
# 开源核心默认链接本 crate:`FreeStubEntitlement` 始终返回 `Unlicensed` → OSS fork 得到的产品
# 所有付费插件不可用、但核心免费功能完整。商业 build 经私有 CI overlay 改链闭源 `pro`
# （`DirectEntitlement`，真实 keyring 验签）。本 crate **恒入仓**（path 依赖恒在，与被 .gitignore
# 排除的 pro 相对）。

[package]
name = "picasa-next-free-stub"
version.workspace = true # Part7-T5:随根版本锚(free-stub 是核心产物的一部分)
edition = "2021"
publish = false

[lib]
name = "picasa_next_free_stub"
path = "src/lib.rs"

[dependencies]
picasa-next-plugin-api = { path = "../picasa-next-plugin-api" }
