# crates/scrollery-ai-core/Cargo.toml
# AI 推理核心(Part4-T15/T16):ort Session 池 + CLIP 编解码 + 人脸检测/嵌入 + 模型契约注册表。
# T16 收口后本 crate 是 workspace **唯一 ort 载体**:ai-worker 开 inference 消费推理面;
# src-tauri 关默认特性,只消费纯契约面(profile 注册表/embedding 字节序/face_types/decoded)。
#
# ort 特性说明:load-dynamic 激活 ort-sys/disable-linking,download-binaries 实际不运行
# (见 engine.rs 坑1);升级 ort 只改本文件(「两处同步」义务已随 src-tauri 直依赖拆除解除)。

[package]
name = "scrollery-ai-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"

# ── AI 推理(与 src-tauri 同版本同特性,见头部注释;T16 准备:全部 optional,
#    随 `inference` feature 启停——缺省开,行为零变化)──────────────────────────────
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "directml", "download-binaries", "copy-dylibs"], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"], optional = true }

# ── 图像预处理(resize/crop/像素访问;解码格式面由消费方各自声明)──────────────────
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"], optional = true }

# ── SessionPool 的有界 channel(RAII 归还)─────────────────────────────────────────
crossbeam-channel = { version = "0.5.15", optional = true }

# ── Windows 原生 API:provider::detect_vram_bytes 的 DXGI 探测(target 限定)─────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"], optional = true }

[features]
# 缺省 = 全推理面(既有消费方 ai-worker/src-tauri 零变化)。
default = ["inference"]
# 推理面(T16 准备):ort Session 池/CLIP 编解码/人脸检测嵌入/EP 探测。
# src-tauri 在 T16 删 ort 时改 `default-features = false`,只留纯契约面
# (profile/face_profile 注册表、face_types 几何、embedding 字节序、decoded 类型)。
inference = [
    "dep:ort",
    "dep:ndarray",
    "dep:tokenizers",
    "dep:image",
    "dep:crossbeam-channel",
    "dep:windows",
]
# 合规隔离(Part4-T1):SCRFD/ArcFace 非商用轨物理不编译;src-tauri 与 ai-worker 的
# 同名 feature 转发至此(单一事实源仍是本 crate 的 cfg 门控)。
face-noncommercial = []
